# Sticky

./: .coverage  LICENSE  README.md  Sticky.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
sample/custom/: sample.py
sample/env/: base.v1.yml  base.v2.yml  projectA.ep02.v1.yml  projectA.v1.yml  toolA.projectA.ep02.v1.yml  toolA.projectA.v1.yml  toolA.v1.yml
src/sticky/: Sticky.py  StickyProjectManager.py
test/: test_sticky.py
tests/: test_StickyProjectManager.py  test_sticky.py
