[metadata]
name = sticky
description = module for mixing configulation
author = Gou.Hattori
license = MIT
platform = win32
version = 1.0.1
classifiers = 
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9

[options]
packages = sticky
install_requires = 
    pyyaml
python_requires = >=2.7
package_dir = 
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
sticky = py.typed

[flake8]
max-line-length = 160
